syntax = "proto3";

option java_multiple_files = true;
package vn.techres.microservice.grpc.java.customer_order_online.order_online;

service OrderOnlineService {
  rpc findCustomerOrderOnlineById(CustomerOrderRequest) returns (BaseListGRPCResponse) {};

  rpc updateCustomerOrderOnlineByTransactionId(CustomerOrderOnlineByTransactionIdRequest) returns (BaseGRPCResponse) {};

  rpc updateCustomerOrderOnlineStatusEnumAndOrderId(OrderRequest) returns (BaseGRPCResponse) {};

  rpc updateCustomerOrderOnlineByOrderId(UpdateCustomerOrderOnlineByOrderIdRequest) returns (BaseGRPCResponse) {};
}

message CustomerOrderOnlineByTransactionIdRequest {
  string transaction_id = 1;
}

message CustomerOrderRequest {
  int32 customer_order_id = 1;
}

message OrderRequest {
  int32 order_id = 1;
  int32 customer_order_id = 2;
  int32 customer_order_status = 3;
}


message UpdateCustomerOrderOnlineByOrderIdRequest {
  int32 order_id = 1;
  int32 customer_order_status = 2;
}

message BaseGRPCResponse {
  int32 status = 1;
  string message = 2;
  CustomerOrderOnlineResponse data = 3;
}

message BaseListGRPCResponse {
  int32 status = 1;
  string message = 2;
  CustomerOrderOnlineResponse customer_order_online = 3;
  repeated CustomerOrderOnlineDetailResponse customer_order_online_detail = 4;
}

message CustomerOrderOnlineResponse {
  int32 id = 1;
  int32 restaurant_id = 2;
  int32 restaurant_brand_id = 3;
  int32 branch_id = 4;
  int32 order_id = 5;
  string transaction_id = 6;
  string customer_name = 7;
  string customer_phone = 8;
  string customer_address = 9;
  string total_amount = 10;
  int32  payment_method = 11;
  int32  payment_status = 12;
  int32  customer_order_status = 13;
  string note = 14;
}

message CustomerOrderOnlineDetailResponse {
  int64  id = 1;
  int32  customer_order_id = 2;
  int32  food_id = 3;
  string food_name = 4;
  int32  order_detail_parent_id = 5;
  int32  order_detail_combo_parent_id = 6;
  string customer_order_detail_addition_ids = 7;
  string customer_order_detail_combo_ids = 8;
  string quantity = 9;
  string price = 10;
  string total_price = 11;
  int32  is_addition = 12;
  int32  is_combo = 13;
  string note = 14;
}
